crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@declarations.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/file/declarations.input
---
Input: module Main where

a :: Int
a = 0

Start { kind: Module }
  Start { kind: ModuleHeader }
    Token { kind: ModuleKw }
    Start { kind: ModuleName }
      Start { kind: Name }
        Token { kind: Upper }
      Finish
    Finish
    Token { kind: WhereKw }
  Finish
  Token { kind: LayoutStart }
  Start { kind: ModuleImports }
    Start { kind: ZeroOrMore }
    Finish
  Finish
  Start { kind: ModuleBody }
    Start { kind: ZeroOrMore }
      Start { kind: ValueAnnotationDeclaration }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
        Token { kind: Colon2 }
        Start { kind: ConstructorType }
          Start { kind: QualifiedName }
            Start { kind: NameRef }
              Token { kind: Upper }
            Finish
          Finish
        Finish
      Finish
      Token { kind: LayoutSep }
      Start { kind: ValueDeclaration }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
        Start { kind: ZeroOrMore }
        Finish
        Start { kind: UnconditionalBinding }
          Token { kind: Equal }
          Start { kind: WhereExpression }
            Start { kind: LiteralExpression }
              Token { kind: LiteralInteger }
            Finish
          Finish
        Finish
      Finish
    Finish
  Finish
  Token { kind: LayoutEnd }
Finish

