crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@empty-record.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/empty-record.input
---
Input: {}

Start { kind: RecordType }
  Token { kind: LeftCurly }
  Start { kind: RowInner }
  Finish
  Token { kind: RightCurly }
Finish
