crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@empty-row.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/type/empty-row.input
---
Input: ()

Start { kind: TypeOperatorChain }
  Start { kind: ApplicationType }
    Start { kind: RowType }
      Start { kind: Wrapped }
        Token { kind: LeftParenthesis }
        Start { kind: RowInner }
        Finish
        Token { kind: RightParenthesis }
      Finish
    Finish
    Start { kind: OneOrMore }
    Finish
  Finish
  Start { kind: OneOrMore }
  Finish
Finish
