crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@false-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/false-binder.input
---
Input: false
Start { kind: LiteralBinder }
  Token { kind: LiteralFalse }
Finish
