crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@integer-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/integer-binder.input
---
Input: 1
Start { kind: LiteralBinder }
  Token { kind: LiteralInteger }
Finish
