crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@negative-binder.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/pattern/negative-binder.input
---
Input: -1
Start { kind: NegativeBinder }
  Token { kind: Minus }
  Start { kind: LiteralBinder }
    Token { kind: LiteralInteger }
  Finish
Finish

